--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
 </header>
 
 
+<div class="slider">
+	<img src="assets/images/slider/01.png" class="img-fluid" alt="">
+
+	<div class="slider-flex">
+		<span class="slider-txt">Nós cuidamos da comunicação do seu negócio</span>
+		<a href=""><span class="slider-play"><i class="fab fa-youtube"></i></span></a>
+		<span class="slider-txt-sub">Clique aqui e dê o play</span>		
+	</div>
+
+</div>
+
+
+<!--<div class="videofull">
+	<div class="embed-responsive embed-responsive-16by9">		
+		<iframe src="https://www.youtube.com/embed/Clqp2790Uqg?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</div>	
+</div>-->
+
+
+
+
 <script src="assets/js/jquery-1.9.1.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/bootstrap/js/popper.min.js"></script>
