--- a/index.html
+++ b/index.html
@@ -66,12 +66,37 @@
 
 </div>
 
+<div class="social-like">
+	<div class="social-like-face">
+		<!-- https://developers.facebook.com/docs/plugins/like-button?locale=pt_BR -->
+		<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=90&layout=button_count&action=like&size=small&show_faces=false&share=false&height=21&appId" width="90" height="21" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+	</div>
 
-<!--<div class="videofull">
-	<div class="embed-responsive embed-responsive-16by9">		
-		<iframe src="https://www.youtube.com/embed/Clqp2790Uqg?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	</div>	
-</div>-->
+	<div class="social-like-google">
+		<!-- https://developers.google.com/+/web/share/ -->
+		<script src="https://apis.google.com/js/platform.js" async defer>
+		  {lang: 'pt-BR'}
+		</script>
+		<div class="g-plus" data-action="share"></div>
+	</div>
+</div>
+
+<div class="quem-somos">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<span class="quem-somos-titu">Quem somos</span>
+				<p>A Olho Vivo está no mercado há 13 anos, Durante toda esta caminhada, acompanhamos o crescimento de várias empresas por todo o Brasil nos enchendo de orgulho ao saber que contribuímos para isto, e como recompensa, estamos até hoje ao lado destas empresas fazendo o que de melhor sabemos. gerenciamentos estratégicos, mídias televisivas e propaganda! Resultado é o fruto de um trabalho sério e criativo, praticado todos os dias, sempre buscando a excelência e usando embasamento técnico, teórico e imaginário para compor todos os nossos trabalhos. Buscar o intangível e transformar em realidade, fazendo valer a nossa filosofia de trabalho que é transformar imaginação em resultados.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<span class="quem-somos-tag">Bora caminhar juntos?</span>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 
 
@@ -82,7 +107,6 @@
 <script src="assets/fontawesome/js/fontawesome-all.min.js"></script>
 <script src="assets/menu-swipe/js/jquery.slideandswipe.min.js"></script>
 <script src="assets/menu-swipe/js/jquery.touchSwipe.min.js"></script>
-
 <div class="ssm-overlay ssm-toggle-nav"></div>
 
 <script>
