--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
 	</div>
 </div>
 
+<div class="fazemos">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<span class="fazemos-titu">o que fazemos</span>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 
 
