--- a/index.html
+++ b/index.html
@@ -103,6 +103,45 @@
 			<div class="col-md-12">
 				<span class="fazemos-titu">o que fazemos</span>
 			</div>
+
+			<div class="fazemos-flex">
+				<div class="fazemos-flex-block">
+					<span class="fazemos000"><i class="fas fa-tv"></i></span>
+					<span class="line"></span>
+					<span class="fazemos001">Estratégia e Planejamento</span>
+					<span class="fazemos002">Estratégia de Campanha / Planejamento de Mídia / Estratégia de Marketing Digital / Mecânica de Campanha Promocional / Planejamento de Campanha de Incentivo</span>
+				</div>
+				<div class="fazemos-flex-block">
+					<span class="fazemos000"><i class="far fa-lightbulb"></i></span>
+					<span class="line"></span>
+					<span class="fazemos001">Propaganda</span>
+					<span class="fazemos002">Criação de Campanha Publicitária / Anúncio / Outdoor / Spot / Filme Publicitário</span>
+				</div>
+				<div class="fazemos-flex-block">
+					<span class="fazemos000"><i class="fas fa-edit"></i></span>
+					<span class="line"></span>
+					<span class="fazemos001">Design Gráfico</span>
+					<span class="fazemos002">Catálogo / Folder / Embalagem / Banner / Mala Direta / Apresentação institucional / Jornal e Revista Institucional / Projeto de Sinalização</span>
+				</div>
+				<div class="fazemos-flex-block">
+					<span class="fazemos000"><i class="fas fa-globe"></i></span>
+					<span class="line"></span>
+					<span class="fazemos001">Web e Digital</span>
+					<span class="fazemos002">Website e Hotsite / Blog / Landing Page / Loja Virtual / initranet / Gerenciador de Conteúdo / E-mail Marketing / Newsletter / Links Patrocinados / SEO</span>
+				</div>
+				<div class="fazemos-flex-block">
+					<span class="fazemos000"><i class="fab fa-hubspot"></i></span>
+					<span class="line"></span>
+					<span class="fazemos001">Redes Sociais</span>
+					<span class="fazemos002">Planejamento de Redes Sociais / Gestão de Conteúdo / Monitoramento e Análise / Anúncios / Ativação de Campanhas</span>
+				</div>
+				<div class="fazemos-flex-block">
+					<span class="fazemos000"><i class="fab fa-codepen"></i></span>
+					<span class="line"></span>
+					<span class="fazemos001">Branding</span>
+					<span class="fazemos002">Marca / Redesign de Marca / Identidade Visual / Manual de Marca / Diagnóstico de Marca</span>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
