--- a/index.html
+++ b/index.html
@@ -146,6 +146,115 @@
 	</div>
 </div>
 
+<div class="trabalhos">
+		<span class="trabalhos-titu">Nossos Trabalhos</span>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+
+
+				<div class="grid">
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>
+					<figure class="effect-zoe">
+						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<figcaption>
+							<h2>Casa do <span>Salgado</span></h2>
+							<p class="icon-links">								
+								<a href="#"><i class="fas fa-eye"></i></span></a>								
+							</p>
+							<p class="description">Campanha de Natal 2017</p>
+						</figcaption>			
+					</figure>																																												
+				</div>
+
+
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
 
 
 
