--- a/index.html
+++ b/index.html
@@ -151,8 +151,6 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-
-
 				<div class="grid">
 					<figure class="effect-zoe">
 						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
@@ -165,88 +163,86 @@
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/02.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Savana <span>Hotel</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha Férias</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/03.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Blackhawk <span>Network</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/04.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Exkalla <span></span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/05.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Madepar <span>Projetos</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/06.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Colégio <span>Salesiano</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/07.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Natura <span></span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/08.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Aialan <span></span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
 					</figure>
 					<figure class="effect-zoe">
-						<img src="assets/images/trabalhos/01.jpg" alt="" class="img-fluid"/>
+						<img src="assets/images/trabalhos/09.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Casa do <span>Salgado</span></h2>
+							<h2>Kids <span>Clube</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
-							<p class="description">Campanha de Natal 2017</p>
+							<p class="description">Campanha 2017</p>
 						</figcaption>			
-					</figure>																																												
+					</figure>										
 				</div>
-
-
 			</div>
 		</div>
 	</div>
