--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<figure class="effect-zoe">
 						<img src="assets/images/trabalhos/04.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Exkalla <span></span></h2>
+							<h2>Exka<span>lla</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
@@ -215,7 +215,7 @@
 					<figure class="effect-zoe">
 						<img src="assets/images/trabalhos/07.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Natura <span></span></h2>
+							<h2>Natu<span>ra</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
@@ -225,7 +225,7 @@
 					<figure class="effect-zoe">
 						<img src="assets/images/trabalhos/08.jpg" alt="" class="img-fluid"/>
 						<figcaption>
-							<h2>Aialan <span></span></h2>
+							<h2>Aial<span>an</span></h2>
 							<p class="icon-links">								
 								<a href="#"><i class="fas fa-eye"></i></span></a>								
 							</p>
