--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>Olho Vivo Propaganda</title>
+	<link rel="shortcut icon" href="assets/images/favicon.png"/> 
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="assets/menu-swipe/css/slide-and-swipe-menu.css">
+	<link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.default.min.css">	
 </head>
 <body>
 
@@ -245,6 +248,78 @@
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<spam class="trabalhos-plus">
+				<i class="fas fa-plus"></i>
+			</spam>			
+		</div>
+	</div>
+</div>
+
+<span class="clientes-titu">Principais Clientes</span>
+
+<div class="clientes">
+	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+			    <div class="owl-parceiros">
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/01.png" alt="">
+                    </div>	
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/02.png" alt="">
+                    </div>	
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/03.png" alt="">
+                    </div>	
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/04.png" alt="">
+                    </div>	
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/05.png" alt="">
+                    </div>	
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/06.png" alt="">
+                    </div>	
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/clientes/07.png" alt="">
+                    </div>	                                                                                                    
+                </div>				
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="contato">
+	<div class="container">
+		<span class="contato-titu">Fale com a gente</span>
+		<div class="row">
+			<div class="col-md-7">
+				<form>
+				  <div class="form-group">				   
+				    <input type="text" class="form-control" placeholder="Nome">
+				  </div>
+				  <div class="form-group">				   
+				    <input type="email" class="form-control" placeholder="Email">
+				  </div>				  
+				  <div class="form-group">				   
+				    <input type="text" class="form-control" placeholder="Telefone">
+				  </div>
+				  <div class="form-group">	
+				    <textarea class="form-control" rows="5" placeholder="Como podemos te ajudar?"></textarea>
+				  </div>
+				  <button type="submit" class="btn">enviar</button>
+				</form>				
+			</div>
+			<div class="col-md-5">
+				<span class="contato-local">Nossa localização</span>
+				<span class="contato-end">Rua Duque de Caxias, 450, Sala 509<br>Edifício Chams, Centro, Uberlândia-MG</span>
+				<span class="contato-cont">Contatos</span>
+				<span class="contato-fone">(34) 3231-5757<br><span class="contato-mail">atendimento@olhovivopropaganda.com.br</span></span>				
+			</div>			
+		</div>
 	</div>
 </div>
 
@@ -259,14 +334,41 @@
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/bootstrap/js/popper.min.js"></script>
 <script src="assets/fontawesome/js/fontawesome-all.min.js"></script>
+<script src="assets/owlcarousel/js/owl.carousel.min.js"></script>
 <script src="assets/menu-swipe/js/jquery.slideandswipe.min.js"></script>
 <script src="assets/menu-swipe/js/jquery.touchSwipe.min.js"></script>
 <div class="ssm-overlay ssm-toggle-nav"></div>
 
+
+
+
 <script>
     $(document).ready(function() {
         $('.swipe').slideAndSwipe();
+
+
     });
+
+
+
+
+    $(document).ready(function(){
+      $('.owl-parceiros').owlCarousel({
+    center: true,
+    items:1,
+    loop:true,
+    margin:10,
+    autoplay:true,
+    autoplayTimeout:5000,
+    autoplayHoverPause:true,
+            responsive:{
+                600:{
+                    items:5
+                }
+            }
+        });
+
+      })
 </script>
 	
 </body>
