--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="assets/menu-swipe/css/slide-and-swipe-menu.css">
 	<link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.default.min.css">	
+    <link rel="stylesheet" href="assets/hover/images.css">	
+    <link rel="stylesheet" href="assets/hover/images2.css">	
 </head>
 <body>
 
@@ -249,9 +251,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<spam class="trabalhos-plus">
+			<span class="trabalhos-plus">
 				<i class="fas fa-plus"></i>
-			</spam>			
+			</span>			
 		</div>
 	</div>
 </div>
@@ -265,25 +267,25 @@
 			<div class="col-md-12">
 			    <div class="owl-parceiros">
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/01.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/01.png" class="img-fluid" alt="">
                     </div>	
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/02.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/02.png" aclass="img-fluid" lt="">
                     </div>	
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/03.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/03.png" class="img-fluid" alt="">
                     </div>	
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/04.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/04.png" class="img-fluid" alt="">
                     </div>	
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/05.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/05.png" class="img-fluid" alt="">
                     </div>	
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/06.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/06.png" class="img-fluid" alt="">
                     </div>	
                     <div class="item">
-                    	<img class="img-responsive" src="assets/images/clientes/07.png" alt="">
+                    	<img class="img-responsive" src="assets/images/clientes/07.png" class="img-fluid" alt="">
                     </div>	                                                                                                    
                 </div>				
 			</div>
@@ -322,6 +324,33 @@
 		</div>
 	</div>
 </div>
+
+<div class="maps">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.2418665122354!2d-48.27953328553484!3d-18.92068548717717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a445007a12611b%3A0xa6902ff16aa66a0a!2sR.+Duque+de+Caxias%2C+450+-+Centro%2C+Uberl%C3%A2ndia+-+MG!5e0!3m2!1spt-BR!2sbr!4v1518615734274" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+
+<footer class="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="footer-flex">
+					<div class="footer-logo">
+						<img src="assets/images/logo.png" class="img-fluid" alt="">
+						<span class="footer-txt">Olho Vivo Propaganda</span>
+					</div>
+					<div class="footer-copy">
+						Copyright 2018 Olho Vivo Propaganda<br>Todos os direitos Reservados.
+					</div>
+					<div class="footer-social">			
+						<a href=""><i class="fab fa-facebook-f"></i></a>
+						<a href=""><i class="fab fa-instagram"></i></a>
+						<a href=""><i class="fab fa-google-plus-g"></i></a>			
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
 
 
